# omni-box

./: CHANGELOG.md  Cargo.toml  README.md  justfile  rust-toolchain.toml
.github/workflows/: release-plz.yml  test.yml
examples/: hello-omni-box.rs
src/: chain_config.rs  lib.rs  network.rs  omni_box.rs  omni_box_options.rs  omni_json_rpc.rs
src/account_config/: mod.rs  near_account.rs
src/clients/: anvil.rs  bitcoin_core.rs  mod.rs  near.rs
src/contexts/: mod.rs
src/contexts/btc/: btc_context.rs  mod.rs  types.rs
src/contexts/btc/utils/: mod.rs
src/contexts/evm/: evm_context.rs  mod.rs
src/contexts/near/: mod.rs  near_context.rs
src/friendly_near_json_rpc_client/: mod.rs  near_network_config.rs  parser.rs
src/nodes/: anvil.rs  bitcoin_core.rs  near.rs
src/utils/: address.rs  mod.rs  signature.rs
tests/: omni_box_integration.rs
