[package]
name = "omni-box"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# ethereum
alloy = { version = "0.6.2", features = ["full", "node-bindings", "rlp"] }

# near
near-workspaces = { version = "0.14.1", features = [
    "experimental",
    "unstable",
] }
near-primitives = { version = "0.25.0" }
near-crypto = { version = "0.25.0" }
near-jsonrpc-client = { git = "https://github.com/omni-rs/near-jsonrpc-client-rs", tag = "v0.12.1" }
near-jsonrpc-primitives = "0.25.0"
near-sdk = { version = "5.3.0", features = ["schemars"] }

# bitcoin
bitcoin = { version = "0.32.0", default-features = false, features = [
    "std",
    "serde",
    "rand-std",
    "rand",
    "secp-lowmemory",
    "secp-recovery",
] }
bitcoind = { package = "bitcoind-json-rpc-regtest", version = "0.3.0", features = [
    "26_0",
] }

# async
tokio = { version = "1.38", features = ["full"] }
# utilities
serde = "1.0"
serde_json = "1.0"
bs58 = "0.5.1"
