[package]
name = "omni-box"
version = "0.1.7"
authors = ["Proximity Labs Limited"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/near/omni-box"
description = "Multichain testing environment for developing chain abstracted applications on NEAR"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# ethereum
alloy = { version = "0.6.2", features = ["full", "node-bindings", "rlp"] }

# near
near-workspaces = { version = "0.14.1", features = [
    "experimental",
    "unstable",
] }
near-primitives = { version = "0.25.0" }
near-crypto = { version = "0.25.0" }
near-jsonrpc-client = { version = "0.12.0" }
near-jsonrpc-primitives = "0.25.0"
near-sdk = { version = "5.3.0", features = ["schemars"] }
omni-transaction = "0.2.1"
# bitcoin
bitcoin = { version = "0.32.0", default-features = false, features = [
    "std",
    "serde",
    "rand-std",
    "rand",
    "secp-lowmemory",
    "secp-recovery",
] }
bitcoind = { package = "bitcoind-json-rpc-regtest", version = "0.3.0", features = [
    "26_0",
] }
sha3 = "0.10.8"
tiny-keccak = "2.0.2"
k256 = { version = "0.13.1", features = [
    "sha256",
    "ecdsa",
    "serde",
    "arithmetic",
    "expose-field",
] }
ripemd = "0.1.3"

# async
tokio = { version = "1.42", features = ["full"] }

# utilities
serde = "1.0.215"
serde_json = "1.0.133"
bs58 = "0.5.1"
hex = "0.4.3"
